kubernetes/gitraf-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitraf-server
  namespace: gitraf
  labels:
    app.kubernetes.io/name: gitraf-server
    app.kubernetes.io/component: web-ui
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: gitraf-server
